remove margin of heading container to try and make sure main page headings align
not yet perfectly aligned, but improved. leaving it as is for now as this is quite a fine-tuning detail and there are still elephants in the room

--- a/client/vite-project/src/components/home/Home.module.scss
+++ b/client/vite-project/src/components/home/Home.module.scss
@@ -15,7 +15,7 @@
     font-size: 4rem;
     font-weight: 400;
     text-align: center;
-    margin-bottom: 0;
+    margin: 0;
 
     &::after {
         content: '.';
